--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.6.2",
+    "antd": "^4.16.3",
     "next": "11.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@types/react": "17.0.11",
+    "@zeit/next-less": "^1.0.1",
     "eslint": "7.29.0",
     "eslint-config-next": "11.0.0",
-    "typescript": "4.3.4"
+    "less": "^4.1.1",
+    "typescript": "4.3.4",
+    "webpack": "^4.46.0"
   }
 }
