--- a/package.json
+++ b/package.json
@@ -17,11 +17,10 @@
   },
   "devDependencies": {
     "@types/react": "17.0.11",
-    "@zeit/next-less": "^1.0.1",
     "eslint": "7.29.0",
     "eslint-config-next": "11.0.0",
-    "less": "^4.1.1",
     "typescript": "4.3.4",
-    "webpack": "^4.46.0"
+    "babel-plugin-import": "^1.13.3",
+    "next-plugin-antd-less": "^1.3.0"
   }
 }
