--- a/package.json
+++ b/package.json
@@ -11,16 +11,19 @@
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
     "antd": "^4.16.3",
+    "immutability-helper": "^3.1.1",
     "next": "11.0.0",
     "react": "17.0.2",
+    "react-dnd": "^14.0.2",
+    "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@types/react": "17.0.11",
+    "babel-plugin-import": "^1.13.3",
     "eslint": "7.29.0",
     "eslint-config-next": "11.0.0",
-    "typescript": "4.3.4",
-    "babel-plugin-import": "^1.13.3",
-    "next-plugin-antd-less": "^1.3.0"
+    "next-plugin-antd-less": "^1.3.0",
+    "typescript": "4.3.4"
   }
 }
