--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+
 # dependencies
 /node_modules
 /.pnp
@@ -32,3 +33,5 @@ yarn-error.log*
 
 # vercel
 .vercel
+
+.npmrc
