--- a/package.json
+++ b/package.json
@@ -14,13 +14,19 @@
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "date-fns": "^2.19.0",
+    "file-saver": "^2.0.5",
     "jsonwebtoken": "^8.5.1",
+    "jszip": "^3.7.1",
+    "mammoth": "^1.4.19",
     "mongoose": "^5.12.0",
     "next": "^12.0.4",
     "path": "^0.12.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-pdf": "^5.5.0",
+    "retext": "^8.1.0",
+    "retext-keywords": "^7.1.0",
+    "retext-pos": "^4.1.0",
     "sanitize-filename": "^1.6.3",
     "shortid": "^2.2.16",
     "swr": "^0.5.3"
