--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "antd": "^4.16.13",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.1.3",
     "date-fns": "^2.19.0",
     "file-saver": "^2.0.5",
     "jsonwebtoken": "^8.5.1",
@@ -22,6 +23,7 @@
     "next": "^12.1.0",
     "path": "^0.12.7",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.2.1",
     "react-dom": "^17.0.2",
     "react-pdf": "^5.5.0",
     "retext": "^8.1.0",
