(feat): add textbokk gen and download as zip

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "date-fns": "^2.19.0",
     "file-saver": "^2.0.5",
     "jsonwebtoken": "^8.5.1",
-    "jszip": "^3.7.1",
+    "jszip": "^3.8.0",
     "mammoth": "^1.4.19",
     "mongoose": "^5.12.0",
     "next": "^12.1.0",
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/file-saver": "^2.0.5",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/react": "^17.0.3",
     "@types/react-pdf": "^5.0.9",
